--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_grafica_pastel.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_grafica_pastel.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo1"
     tools:context=".Grafica_pastel">
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/lineChart"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
-        android:layout_height="200dp" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
