--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_perfil.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_perfil.xml
@@ -5,14 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/fondo1"
     tools:context=".Perfil">
-
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/fondo1"/>
 
     <LinearLayout
         android:layout_width="match_parent"
