Revert "mejora de diseno"
This reverts commit 3d6494aedbaf1e9053d9b35f88a0b00e67d20ed4.

--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_lista__asistencia.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_lista__asistencia.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo1"
     android:orientation="vertical"
     tools:context=".Lista_Asistencia">
 
@@ -13,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Lista de asistencia"
-        android:textColor="@color/colorWhite"
         android:textAlignment="center"
         android:textSize="30sp" />
 
@@ -24,10 +22,8 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="150dp"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/borde_text"
             android:text="Nombre"
             android:textAlignment="center" />
 
@@ -35,24 +31,18 @@
             android:id="@+id/TituloAsiste"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/borde_text"
             android:text="Estado"
             android:textAlignment="center" />
         <TextView
             android:id="@+id/TituloHoraInicio"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/borde_text"
             android:text="Hora Inicio"
             android:textAlignment="center" />
         <TextView
             android:id="@+id/TituloHoraFin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/borde_text"
             android:text="Num. Horas"
             android:textAlignment="center" />
     </LinearLayout>
@@ -67,29 +57,28 @@
             android:orientation="horizontal" >
             <LinearLayout
                 android:id="@+id/ContenedorNombre"
-                android:layout_width="150dp"
+                android:layout_width="170dp"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:background="@drawable/borde_text"/>
+                android:orientation="vertical"/>
             <LinearLayout
                 android:id="@+id/ContenedorEstado"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:background="@drawable/borde_text"/>
+                android:orientation="vertical" />
             <LinearLayout
                 android:id="@+id/ContenedorHora"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:background="@drawable/borde_text"/>
+                android:orientation="vertical" />
             <LinearLayout
                 android:id="@+id/ContenedorCantHoras"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:background="@drawable/borde_text"/>
+                android:orientation="vertical" />
         </LinearLayout>
 
     </ScrollView>
+
+
+
 </LinearLayout>
