--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_asistente.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_asistente.xml
@@ -4,14 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo1"
     tools:context=".Asistente" >
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/fondo1"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp">
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -44,12 +47,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/RL_foto"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="center"
                 android:text="@string/app_nameUser"
                 android:textColor="@color/colorWhite"
                 android:textStyle="bold"
                 android:textSize="24sp" />
-
             <LinearLayout
                 android:id="@+id/layoutCoord"
                 android:layout_width="match_parent"
@@ -61,26 +65,25 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="@drawable/bordestv">
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/txt_mail"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="@drawable/bordestv"
-                        android:text="@string/correoPtxt"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:background="#00A88585"
+                        android:text="Correo: "
                         android:textColor="@color/colorDark"
-                        android:gravity="center_vertical"
                         android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/txt_cellphone"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/bordestv"
-                        android:text="@string/phonePtxt"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginStart="10dp"
+                        android:text="Phone number: "
                         android:textSize="18sp"
                         android:textColor="@color/colorDark"
 
@@ -88,20 +91,20 @@
                     <TextView
                         android:id="@+id/txt_viewMatricula"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/bordestv"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginStart="10dp"
                         android:textSize="18sp"
-                        android:text="@string/matriculaPtxt"
+                        android:text="Matricula:"
                         android:textColor="@color/colorDark"/>
 
                     <TextView
                         android:id="@+id/txt_ViewLat"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/bordestv"
-                        android:text="@string/latitudPtxt"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginStart="10dp"
+                        android:text="Latitud: "
                         android:textSize="18sp"
                         android:textColor="@color/colorDark"
 
@@ -110,10 +113,10 @@
                     <TextView
                         android:id="@+id/txt_ViewLon"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/bordestv"
-                        android:text="@string/longitudPtxt"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginStart="10dp"
+                        android:text="Longitud: "
                         android:textSize="18sp"
                         android:textColor="@color/colorDark"
 
@@ -125,58 +128,69 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="@drawable/bordestv">
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/txt_correo"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/bordestv"
-                        android:hint="@string/correoRtxt"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:gravity="center"
+                        android:hint="correo"
                         android:textSize="18sp"
-                        android:textColor="@color/colorDark"/>
+                        android:textColor="@color/colorDark"
+
+                        />
 
                     <TextView
                         android:id="@+id/txt_phone"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="@drawable/bordestv"
-                        android:gravity="center_vertical"
-                        android:hint="@string/phoneRtxt"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="30dp"
+                        android:gravity="center"
+                        android:hint="Phone number"
                         android:textSize="18sp"
-                        android:textColor="@color/colorDark"/>
+                        android:textColor="@color/colorDark"
+
+                        />
 
                     <TextView
                         android:id="@+id/txt_matricula"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="@drawable/bordestv"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginEnd="10dp"
                         android:textSize="18sp"
-                        android:gravity="center_vertical"
+                        android:gravity="center"
                         android:textColor="@color/colorDark"
-                        android:hint="@string/matriculaRtxt" />
+                        android:hint="matricula" />
 
                     <TextView
                         android:id="@+id/txt_Latitud"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="@drawable/bordestv"
-                        android:gravity="center_vertical"
-                        android:hint="@string/latitudRtxt"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginEnd="10dp"
+                        android:gravity="center"
+                        android:hint="Latitud "
                         android:textSize="18sp"
-                        android:textColor="@color/colorDark"/>
+                        android:textColor="@color/colorDark"
+
+                        />
 
                     <TextView
                         android:id="@+id/txt_Longitud"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/bordestv"
-                        android:hint="@string/longitudRtxt"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginEnd="10dp"
+                        android:gravity="center"
+                        android:hint="Longitud "
                         android:textSize="18sp"
-                        android:textColor="@color/colorDark"/>
+                        android:textColor="@color/colorDark"
+
+                        />
 
 
                 </LinearLayout>
@@ -189,7 +203,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/layoutCoord"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorDark"
                 android:layout_centerHorizontal="true"
                 android:textSize="18sp"
                 android:layout_marginTop="50dp"
@@ -212,11 +226,11 @@
                 android:layout_centerInParent="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
-                android:background="@drawable/borde_redondo"
-                android:drawableEnd="@android:drawable/checkbox_on_background"
-                android:text="@string/asistir"
+                android:background="@color/colorBlue"
+                android:drawableRight="@android:drawable/checkbox_on_background"
+                android:text="Asistir"
                 android:textAlignment="center"
-                android:textColor="@color/colorDark"
+                android:textColor="@color/colorWhite"
                 android:textSize="18sp" />
 
             <Button
@@ -227,11 +241,11 @@
                 android:layout_centerInParent="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
-                android:background="@drawable/borde_redondo"
-                android:drawableEnd="@android:drawable/checkbox_on_background"
-                android:text="@string/marcarSalida"
+                android:background="@color/colorBlue"
+                android:drawableRight="@android:drawable/checkbox_on_background"
+                android:text="Marcar Salida"
                 android:textAlignment="center"
-                android:textColor="@color/colorDark"
+                android:textColor="@color/colorWhite"
                 android:textSize="18sp" />
             <Button
                 android:id="@+id/btn_historial"
@@ -241,11 +255,11 @@
                 android:layout_centerInParent="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
-                android:background="@drawable/borde_redondo"
-                android:drawableEnd="@android:drawable/checkbox_on_background"
-                android:text="@string/historial"
+                android:background="@color/colorBlue"
+                android:drawableRight="@android:drawable/checkbox_on_background"
+                android:text="Historial de asistencias"
                 android:textAlignment="center"
-                android:textColor="@color/colorDark"
+                android:textColor="@color/colorWhite"
                 android:textSize="18sp" />
 
             <Button
@@ -257,11 +271,11 @@
                 android:layout_centerInParent="true"
                 android:layout_marginTop="60dp"
                 android:layout_marginBottom="80dp"
-                android:background="@drawable/borde_redondo"
-                android:drawableEnd="@android:drawable/btn_dialog"
+                android:background="@color/colorBlue"
+                android:drawableRight="@android:drawable/btn_dialog"
                 android:onClick="cerrarSesion"
-                android:text="@string/cerrarSesion"
-                android:textColor="@color/colorDark"
+                android:text="Cerrar Sesion"
+                android:textColor="@color/colorWhite"
                 android:textSize="18sp" />
 
 
