--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_formulario_curso.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_formulario_curso.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/fondo1"
     tools:context=".FormularioCurso">
 
     <ScrollView
@@ -23,7 +22,7 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_marginTop="30dp"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorDark"
                 android:layout_height="50dp"
                 android:textAlignment="center"
                 android:text="Crear evento"
@@ -33,10 +32,8 @@
             <EditText
                 android:id="@+id/etNombreCurso"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginTop="50dp"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite"
                 android:hint="Nombre de Curso *"
                 android:textSize="20sp"
 
@@ -45,87 +42,76 @@
             <EditText
                 android:id="@+id/etDescripcion"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite"
+                android:layout_height="50dp"
                 android:hint="Descripcion"
-                android:textSize="20dp"/>
+                android:textSize="20dp"
+
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/btn_Fecha"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/calendario"
-                        android:text="Select Date"
-                        android:textSize="15sp" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/etFecha"
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorWhite"
+                        android:layout_width="233dp"
+                        android:layout_height="50dp"
                         android:text="Fecha*"
-                        android:layout_gravity="center_vertical"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"/>
+
+                    <Button
+                        android:id="@+id/btn_Fecha"
+                        android:layout_width="136dp"
+                        android:layout_height="50dp"
+                        android:text="Select Date"
+                        android:textSize="15sp" />
 
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/btn_HoraInicio"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/time"
-                        android:textSize="15sp" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/etHoraInicio"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:textColor="@color/colorWhite"
+                        android:layout_width="233dp"
+                        android:layout_height="50dp"
                         android:text="Hora de Inicio*"
                         android:textSize="20sp"/>
+
+                    <Button
+                        android:id="@+id/btn_HoraInicio"
+                        android:layout_width="136dp"
+                        android:layout_height="50dp"
+                        android:text="Select Time"
+                        android:textSize="15sp" />
 
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/btn_HoraFin"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/time"
-                        android:textSize="15sp" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/etHoraFin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:textColor="@color/colorWhite"
+                        android:layout_width="233dp"
+                        android:layout_height="50dp"
                         android:text="Hora de Fin"
                         android:textSize="20sp"/>
+
+                    <Button
+                        android:id="@+id/btn_HoraFin"
+                        android:layout_width="136dp"
+                        android:layout_height="50dp"
+                        android:text="Select Time"
+                        android:textSize="15sp" />
 
 
                 </LinearLayout>
@@ -137,10 +123,8 @@
             <EditText
                 android:id="@+id/etTimeRetraso"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:hint="Min. tiempo de retraso (min)"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite"
                 android:textSize="20sp"
 
                 />
@@ -151,7 +135,7 @@
                 android:layout_height="match_parent"
                 android:text="Permitir Retraso*"
                 android:layout_weight="2"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorDark"
                 android:layout_marginTop="15dp"
                 android:textSize="20sp"
                 />
@@ -162,7 +146,7 @@
                 android:layout_height="match_parent"
                 android:text="Marcar salida"
                 android:layout_weight="2"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorDark"
                 android:layout_marginTop="15dp"
                 android:textSize="20sp"
                 />
@@ -174,7 +158,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorDark"
                 android:text="@string/Marcar_Zona"
                 android:textAlignment="center"
                 android:textSize="15sp"/>
@@ -186,9 +170,8 @@
                 style="@android:style/Widget.Button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="100dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:background="@drawable/borde_redondo"
                 android:layout_marginTop="30dp"
                 android:text="Punto 1" />
 
@@ -197,9 +180,8 @@
                 style="@android:style/Widget.Button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="100dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:background="@drawable/borde_redondo"
                 android:layout_marginTop="30dp"
                 android:text="Punto 2" />
 
@@ -208,11 +190,10 @@
                 style="@android:style/Widget.Button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="100dp"
                 android:layout_marginBottom="80dp"
                 android:text="Guardar "
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:background="@drawable/borde_redondo"
                 android:layout_marginTop="30dp"/>
 
 
