--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_main.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main"
     tools:context=".MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/main" />
+
 
         <TextView
             android:id="@+id/txt_"
