--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_splash.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_splash.xml
@@ -4,8 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo1"
     tools:context=".Splash">
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fondo1" />
 
     <ImageView
         android:id="@+id/imageView6"
