--- a/AsistenciaAutomatica/app/src/main/res/layout/prueba.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/prueba.xml
@@ -7,8 +7,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/main">
+        android:layout_height="match_parent">
+
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/main" />
 
 
         <TextView
