--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_main.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_main.xml
@@ -9,31 +9,21 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/txt_"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="400dp"
-            android:gravity="center"
-            android:text="Loging with"
-            android:textColor="@color/colorWhite"
-            android:textSize="15sp"
-            android:textStyle="italic" />
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-224dp">
 
         <ImageButton
             android:id="@+id/btn_login"
             android:layout_width="260dp"
             android:layout_height="36dp"
-            android:layout_below="@id/txt_"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="400dp"
+            android:background="@drawable/borde_redondo"
             android:onClick="iniciarSesion"
             android:src="@drawable/boton_google" />
+
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
