--- a/AsistenciaAutomatica/app/src/main/res/layout/matricula.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/matricula.xml
@@ -15,27 +15,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/dialogo" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/borde_redondo"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:text="@string/matricula"
                 android:textAlignment="center"
-                android:layout_marginTop="90dp"
-                android:textStyle="bold"
                 android:textColor="@color/colorDark"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edtMatricula"
@@ -55,8 +52,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/borde_redondo"
                 android:layout_marginTop="40dp"
+                android:background="@drawable/borde_redondo"
                 android:text="ACEPTAR"
                 android:textColor="@color/colorDark"
                 android:textSize="15sp" />
